@@ -1,0 +1,22 @@
+<h1>五個不完整的年輕人組成樂隊Dragon Pony：用激情音樂喊出不服從的聲音</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/-vxSUq-iPV4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>Dragon Pony是一個新成立的五人樂隊，由主唱安泰圭、吉他手權世赫、貝斯手邊成賢和鼓手高江勳組成。這個樂隊隸屬於獨立音樂巨頭Antenna旗下，最近發行了首張專輯《Pop Up》。</p>
+<p>樂隊的口號是「不完整男孩的熱血音樂」，他們認為這句話最能代表他們的音樂風格。主唱安泰圭解釋道：「我們將通過歌曲表達真實的情感，展現激情的能量。」</p>
+<p>樂隊的四位成員都是音樂製作人，全部參與了歌詞創作、作曲和編曲。貝斯手邊成賢強調：「雖然所有歌曲都是搖滾樂，但每首歌都有自己的獨特個性。」</p>
+<p>主打歌《Pop Up》是一首自傳性質的歌曲，講述了不完整的男孩不適應普通生活的故事。成員們通過歌曲表達了選擇跟隨自己的道路而不是社會規範的信息。</p>
+<p>樂隊成員邊成賢表示：「主打歌是在準備這張專輯時新創作的。我们認為自己的優點是能夠和觀眾一起玩樂和跳躍，所以我們選擇了一首大家都能夠享受和一起喊叫的歌曲作為主打歌。」</p>
+<p>在專輯的製作名單中，沒有列出個別成員的名字，而是全部以團隊名稱Dragon Pony標示。吉他手權世赫解釋道：「雖然某個人可能提供了歌曲的基本想法或概念，但我們所有成員都貢獻了完成這首歌曲。所以我們決定在製作名單中列出團隊名稱Dragon Pony。」<h2>Dragon Pony：從高中朋友到搖滾樂隊</h2></p>
+<p>Dragon Pony的成員高江勳、邊成賢和權世赫是高中朋友，也是首爾藝術大學的同學。他們在高中時期就曾經談過組建樂隊，但當時沒有實現。現在，他們終於在同一個團隊中出道了。</p><p>在上週四出道之前，Dragon Pony已經被列入韓國多個大型音樂節的演出陣容中，包括Hyundai Card Da Vinci Motel、2024釜山國際搖滾音樂節和Grand Mint Festival。他們還在一分鐘內售出了500張出道單獨演唱會的門票，並成功完成了社交媒體任務，獲得了20,000名關注者。</p><p>成員們表示，他們的出道只是開始，並分享了對未來的決心。他們希望能夠捕捉自己不完整的個體在一起成長和變得更加完整的過程，並給很多人帶來安慰。</p><p>他們的目標是成為世界著名音樂節的主打樂隊，例如Lollapalooza和格拉斯顿伯里音乐节。</p><p><ul></p>
+<p><li>Dragon Pony的成員：</p>
+<p><ul></p>
+      <li>高江勳</li>      <li>邊成賢</li>      <li>權世赫</li><p></ul></p>
+<p></li></p>
+<p><li>音樂節演出陣容：</p>
+<p><ul></p>
+      <li>Hyundai Card Da Vinci Motel</li>      <li>2024釜山國際搖滾音樂節</li>      <li>Grand Mint Festival</li><p></ul></p>
+<p></li></p>
+<p></ul></p>
+
+<p>資料來源： Korea Herald</p>
